force-app/main/default/objects/Exl_WorkOrder_LineItem__mdt/Exl_WorkOrder_LineItem__mdt.object-meta.xml
<CustomObject>
    <label>Work Order Line Item</label>
    <pluralLabel>Work Order Line Items</pluralLabel>
</CustomObject>