force-app/main/default/objects/Exl_WorkOrder_LineItem__mdt/fields/is_Button__c.field-meta.xml
<CustomField>
    <fullName>is_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Button</label>
    <type>Checkbox</type>
</CustomField>