force-app/main/default/objects/Exl_WorkOrder_LineItem__mdt/fields/Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Type__c</fullName>
    <label>Line_Item_Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>