force-app/main/default/objects/Exl_WorkOrder_LineItem__mdt/fields/StartReplicatedState__c.field-meta.xml
<CustomField>
    <fullName>StartReplicatedState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Replicated State</label>
    <type>Checkbox</type>
</CustomField>