force-app/main/default/objects/Exl_WorkOrder_LineItem__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Line_Item_Type__c</columns>
    <columns>Mandatory__c</columns>
    <columns>is_Button__c</columns>
    <columns>StartReplicatedState__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>